# linguaflow-telegram-bot

./: .env.example  .gitignore  DB_SCHEMA.md  MIGRATION_GUIDE.md  README.md  pyproject.toml  requirements.txt  run_bot.py
alembic/: env.py
alembic/versions/: .gitkeep  0b885dcfc8f0_add_example_sentence_ru_to_words.py  70d4967f1b95_placeholder.py  94e93521e2e7_initial_migration.py  a1b2c3d4e5f6_drop_user_dictionary_table.py
bot/: __init__.py  config.py  main.py
bot/database/: database.py  init_data.py  models.py  repository.py
bot/handlers/: achievements.py  dictionary.py  start.py  statistics.py  training.py
bot/utils/: logger.py
