[project]
name = "LinguaFlow_Bot"
version = "1.0.0"
description = "Telegram-бот для изучения английского языка"
requires-python = ">=3.13"

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = ["venv", ".git", "__pycache__", "alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["bot"]
